Changed prev close to recent close. Finished calculating $ and % changes.
Prev close was not the correct terminology to use and switched to recent
close instead.

--- a/app/src/main/res/layout/detail_main_section_center_vertical.xml
+++ b/app/src/main/res/layout/detail_main_section_center_vertical.xml
@@ -53,7 +53,7 @@
         <TextView
             style="@style/DetailColumnsCommon.TextSize.LeftCommon.DetailMainLeft"
             android:layout_width="0dp"
-            android:text="@string/prev_close"
+            android:text="@string/recent_close"
             app:layout_columnWeight="1" />
 
         <TextView
