--- a/app/src/main/res/drawable-v21/list_item_selector_base.xml
+++ b/app/src/main/res/drawable-v21/list_item_selector_base.xml
@@ -2,5 +2,5 @@
 
 <ripple xmlns:android="http://schemas.android.com/apk/res/android"
     android:color="?attr/colorControlHighlight">
-    <item android:drawable="?android:attr/colorBackground"/>
+    <item android:drawable="@color/white_grey"/>
 </ripple>
