--- a/app/src/main/res/values-sw360dp-land/dimens.xml
+++ b/app/src/main/res/values-sw360dp-land/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--detail_main_section-->
     <dimen name="symbol_text_size">24sp</dimen>
+
+    <!-- list item -->
+    <dimen name="list_item_horizontal_padding">104dp</dimen>
 </resources>
