--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
 
     <color name="secondary_text">#727272</color>
     <color name="white">#ffffff</color>
+    <color name="white_grey">#f5f5f5</color>
     <color name="black">#000000</color>
 
     <!--stock up or down colors-->
