--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,9 +11,15 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
-    <!-- list_item_first TextView style -->
+    <!-- list_item_first.xml TextView style -->
     <style name="ListItemFirstTextLarge">
-        <item name="android:textSize">30sp</item>
+        <item name="android:textSize">28sp</item>
+    </style>
+
+    <!-- list_item.xml TextView style for the first row-->
+    <style name="ListItemFirstRow">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <!-- streak arrows -->
