--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -5,20 +5,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
     <com.mcochin.stockstreaks.custom.LogoTextView
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
-        android:layout_below="@id/toolbar"
         android:layout_toLeftOf="@+id/center_space"
         android:layout_toStartOf="@+id/center_space"
         android:gravity="center"
@@ -28,33 +18,54 @@
         android:text="@string/app_name"
         app:fontName="@string/logo_font_name"/>
 
-    <Space
-        android:id="@+id/center_space"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true"/>
+    <com.quinny898.library.persistentsearch.SearchBox
+        android:id="@+id/appBar"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_bar_height"
+        android:layout_below="@+id/logo"
+        android:layout_toLeftOf="@+id/center_space"
+        android:layout_toStartOf="@+id/center_space"
+        android:background="@color/colorPrimary"
+        app:hintText="@string/search_hint"/>
 
     <include layout="@layout/activity_main_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toLeftOf="@+id/center_space"
         android:layout_toStartOf="@+id/center_space"
-        android:layout_below="@id/logo"/>
+        android:layout_below="@+id/appBar"/>
+
+    <Space
+        android:id="@+id/center_space"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_centerInParent="true"/>
 
     <include layout="@layout/activity_main_card_view"
+        android:id="@+id/detail_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toRightOf="@+id/center_space"
         android:layout_toEndOf="@+id/center_space"
-        android:layout_below="@+id/toolbar"
         android:layout_marginRight="@dimen/card_view_margin"
         android:layout_marginEnd="@dimen/card_view_margin"
-        android:layout_marginBottom="@dimen/card_view_margin"/>
+        android:layout_marginTop="@dimen/card_view_margin"/>
+
+    <!-- These views provides a little square used to give the illusion of overlapping
+by the cardView-->
+    <View
+        android:id="@+id/top_overlap_view"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/card_view_margin"
+        android:background="@color/colorPrimary"
+        android:layout_toRightOf="@+id/center_space"
+        android:layout_toLeftOf="@+id/right_overlap_view"/>
 
     <View
+        android:id="@+id/right_overlap_view"
         android:layout_width="@dimen/card_view_margin"
-        android:layout_height="?attr/listPreferredItemHeight"
+        android:layout_height="132dp"
         android:background="@color/colorPrimary"
         android:layout_alignParentRight="true"
-        android:layout_below="@id/toolbar"/>
+        android:layout_alignParentEnd="true" />
 </RelativeLayout>
