--- a/app/src/main/res/layout-sw600dp/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp/activity_main.xml
@@ -6,20 +6,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_height="?attr/actionBarSize"
-        android:layout_width="match_parent"
-        android:layout_alignParentTop="true"
-        android:background="@color/colorPrimary"
-        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
     <com.mcochin.stockstreaks.custom.LogoTextView
         android:id="@+id/logo"
         android:layout_width="match_parent"
         android:layout_height="?attr/listPreferredItemHeight"
-        android:layout_below="@+id/toolbar"
+        android:layout_alignParentTop="true"
         android:gravity="center"
         android:background="@color/colorPrimary"
         android:textColor="@android:color/white"
@@ -27,22 +18,29 @@
         android:text="@string/app_name"
         app:fontName="@string/logo_font_name"/>
 
+    <com.quinny898.library.persistentsearch.SearchBox
+        android:id="@+id/appBar"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/app_bar_height"
+        android:layout_below="@+id/logo"
+        android:background="@color/colorPrimary"
+        app:hintText="@string/search_hint"/>
+
     <!-- This view provides a little square used to give the illusion of overlapping
     by the cardView-->
     <View
         android:layout_width="@dimen/card_view_margin"
         android:layout_height="@dimen/details_app_bar_overlap"
-        android:elevation="@dimen/appbar_elevation"
         android:background="@color/colorPrimary"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/logo" />
+        android:layout_below="@+id/appBar" />
 
     <include
         layout="@layout/activity_main_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/logo"
+        android:layout_below="@+id/appBar"
         android:layout_marginLeft="@dimen/abc_list_item_padding_horizontal_material"
         android:layout_marginRight="@dimen/abc_list_item_padding_horizontal_material"
         tools:layout_height="360dp"/>
@@ -52,11 +50,10 @@
     <View
         android:layout_width="@dimen/card_view_margin"
         android:layout_height="@dimen/details_app_bar_overlap"
-        android:elevation="@dimen/appbar_elevation"
         android:background="@color/colorPrimary"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_below="@+id/logo" />
+        android:layout_below="@+id/appBar" />
 
     <include layout="@layout/activity_main_recycler_view"
         android:layout_width="match_parent"
