--- a/app/src/main/res/values-land/dimens.xml
+++ b/app/src/main/res/values-land/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--list_item_first-->
+    <dimen name="list_item_first_main_info_spacing">25dp</dimen>
+
+    <!--list_item-->
     <dimen name="list_item_horizontal_padding">40dp</dimen>
 </resources>
