--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <!--list_item_first-->
+    <dimen name="list_item_first_main_info_text_size">28sp</dimen>
+
     <!--detail fragment-->
     <item name="detail_center_vertical" type="dimen" format="boolean">true</item>
 
