Added CoordinatorLayout, tablet list_item padding
Altered the main activity layouts to use CoordinatorLayout to support
swiping away the snackbar.

Customized the tablet list_item padding to make it look better.

--- a/app/src/main/res/layout-land/list_item_first.xml
+++ b/app/src/main/res/layout-land/list_item_first.xml
@@ -12,7 +12,7 @@
         android:id="@+id/swipe_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="15dp"
+        android:padding="@dimen/list_item_first_padding"
         android:background="@color/white"
         app:columnCount="3">
 
