--- a/app/src/main/res/values-sw360dp/dimens.xml
+++ b/app/src/main/res/values-sw360dp/dimens.xml
@@ -10,4 +10,7 @@
 some reason and we need to fill it out vertically-->
     <dimen name="detail_extras_section_top_padding">0dp</dimen>
     <dimen name="detail_extras_section_bottom_padding">0dp</dimen>
+
+    <!-- list item -->
+    <dimen name="list_item_long_horizontal_padding">104dp</dimen>
 </resources>
