--- a/app/src/main/res/values-sw720dp/dimens.xml
+++ b/app/src/main/res/values-sw720dp/dimens.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- 7 inch tablet and above-->
 <resources>
-    <dimen name="card_view_margin">64dp</dimen>
+    <!-- Values for the cardView detail view in tablets-->
+    <dimen name="card_view_horizontal_margin">64dp</dimen>
+    <dimen name="card_view_vertical_margin">32dp</dimen>
+
+    <!-- list item -->
+    <dimen name="list_item_horizontal_padding">120dp</dimen>
 </resources>
