--- a/app/src/main/res/layout-sw600dp-land/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-land/activity_main.xml
@@ -1,71 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:focusableInTouchMode="true">
 
-    <com.mcochin.stockstreaks.custom.LogoTextView
-        android:id="@+id/logo"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="?attr/listPreferredItemHeight"
-        android:layout_toLeftOf="@+id/center_space"
-        android:layout_toStartOf="@+id/center_space"
-        android:gravity="center"
-        android:background="@color/colorPrimary"
-        android:textColor="@android:color/white"
-        android:textSize="@dimen/logo_font_size"
-        android:text="@string/app_name"
-        app:fontName="@string/logo_font_name"/>
+        android:layout_height="match_parent">
 
-    <com.quinny898.library.persistentsearch.SearchBox
-        android:id="@+id/appBar"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/app_bar_height"
-        android:layout_below="@+id/logo"
-        android:layout_toLeftOf="@+id/center_space"
-        android:layout_toStartOf="@+id/center_space"
-        android:background="@color/colorPrimary"
-        app:hintText="@string/search_hint"/>
+        <com.mcochin.stockstreaks.custom.LogoTextView
+            android:id="@+id/logo"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/listPreferredItemHeight"
+            android:layout_toLeftOf="@+id/center_space"
+            android:layout_toStartOf="@+id/center_space"
+            android:gravity="center"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:textSize="@dimen/logo_font_size"
+            android:text="@string/app_name"
+            app:fontName="@string/logo_font_name"/>
 
-    <include layout="@layout/activity_main_recycler_view"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toLeftOf="@+id/center_space"
-        android:layout_toStartOf="@+id/center_space"
-        android:layout_below="@+id/appBar"/>
+        <com.quinny898.library.persistentsearch.SearchBox
+            android:id="@+id/appBar"
+            android:layout_width="wrap_content"
+            android:layout_height="@dimen/app_bar_height"
+            android:layout_below="@+id/logo"
+            android:layout_toLeftOf="@+id/center_space"
+            android:layout_toStartOf="@+id/center_space"
+            android:background="@color/colorPrimary"
+            app:hintText="@string/search_hint"/>
 
-    <Space
-        android:id="@+id/center_space"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_centerInParent="true"/>
+        <include layout="@layout/activity_main_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toLeftOf="@+id/center_space"
+            android:layout_toStartOf="@+id/center_space"
+            android:layout_below="@+id/appBar"/>
 
-    <include layout="@layout/activity_main_card_view"
-        android:id="@+id/detail_container"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_toRightOf="@+id/center_space"
-        android:layout_toEndOf="@+id/center_space"
-        android:layout_marginRight="@dimen/card_view_margin"
-        android:layout_marginEnd="@dimen/card_view_margin"
-        android:layout_marginTop="@dimen/card_view_margin"/>
+        <Space
+            android:id="@+id/center_space"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true"/>
 
-    <!-- These views provides a little square used to give the illusion of overlapping
-by the cardView-->
-    <View
-        android:id="@+id/top_overlap_view"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/card_view_margin"
-        android:background="@color/colorPrimary"
-        android:layout_toRightOf="@+id/center_space"
-        android:layout_toLeftOf="@+id/right_overlap_view"/>
+        <!-- These views provides a little square used to give the illusion of overlapping
+    by the cardView-->
+        <View
+            android:layout_width="wrap_content"
+            android:layout_height="132dp"
+            android:background="@color/colorPrimary"
+            android:layout_toRightOf="@+id/center_space"
+            android:layout_toEndOf="@+id/center_space" />
 
-    <View
-        android:id="@+id/right_overlap_view"
-        android:layout_width="@dimen/card_view_margin"
-        android:layout_height="132dp"
-        android:background="@color/colorPrimary"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
-</RelativeLayout>
+        <include layout="@layout/activity_main_card_view"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@+id/center_space"
+            android:layout_toEndOf="@+id/center_space"
+            android:layout_marginRight="@dimen/card_view_horizontal_margin"
+            android:layout_marginEnd="@dimen/card_view_horizontal_margin"
+            android:layout_marginTop="@dimen/card_view_vertical_margin"
+            android:layout_marginBottom="@dimen/card_view_vertical_margin"/>
+    </RelativeLayout>
+</android.support.design.widget.CoordinatorLayout>
