--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rootView"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:focusableInTouchMode="true">
 
     <com.quinny898.library.persistentsearch.SearchBox
@@ -16,6 +16,9 @@
         app:logoText="@string/app_name"
         app:typefacePath="@string/logo_typeface_path"/>
 
-    <include layout="@layout/activity_main_recycler_view"/>
+    <include layout="@layout/activity_main_recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/app_bar_height"/>
 
-</LinearLayout>
+</android.support.design.widget.CoordinatorLayout>
